Retarget URS modernization stack to Java 25 LTS / Spring Boot 4 (Spring Framework 7); add JDK-25 migration note